# perf-counter

./: .clang-tidy  CMakeLists.txt  README.md
examples/: CMakeLists.txt  perf_avx2_fma.cpp
include/: perf_counter.h
src/: perf_counter.c
